# ghosttpy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: broadcast.py  dev_layout.py  tile_columns.py  window_info.py
src/: ghosttpy.py
src/ghosttpy/: __init__.py
tests/: conftest.py  test_integration.py  test_scripting.py  test_types.py
