[project]
name = "ghosttpy"
version = "0.1.2"
description = "A Python library for scripting Ghostty"
readme = "README.md"
license = "MIT"
authors = [{ name = "Dylan Modesitt", email = "dylanmodesitt@gmail.com" }]
requires-python = ">=3.13"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/DylanModesitt/ghosttpy"
Repository = "https://github.com/DylanModesitt/ghosttpy"
Issues = "https://github.com/DylanModesitt/ghosttpy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ghosttpy.py"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
markers = ["integration: requires a running Ghostty instance"]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
